--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.wealthsystemsweb</groupId>
-	<artifactId>wealthsystemsweb</artifactId>
+	<groupId>com.ws</groupId>
+	<artifactId>ws</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>wealthsystemsweb</name>
-	<description>Spring Boot wealthsystemsweb</description>
+	<name>ws</name>
+	<description>Spring Boot ws</description>
 
 	<properties>
 		<java.version>1.8</java.version>
