--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/wsdb
+#spring.datasource.username=root
+#spring.datasource.password=root
+
 spring.datasource.url=jdbc:h2:mem:WsDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=ws
@@ -6,3 +11,4 @@ spring.datasource.password=ws
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
+
